把电视机拆了然后装不回去了干脆改成收音机

--- a/sqlinterpreter/.gitignore
+++ b/sqlinterpreter/.gitignore
@@ -1,14 +1,13 @@
-# Compiled class file
-*.class
-
 .DS_Store
 
 .path
 
 .project
 
-/bin
+.class
 
-/.settings
+bin/
 
-/.metadata
+.settings/
+
+.metadata/
